# webds_device_info

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  note.txt  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
src/: dvcInfoIcons.tsx  handler.ts  icons.ts  index.ts  svg.d.ts  webdsTheme.tsx  webds_theme.tsx  widget_component.tsx  widget_container.tsx
style/: base.css
